// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DEPRECATED / Molecules / Select  Select with hidden label 1`] = `
.c0 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  width: 100%;
  height: 32px;
  opacity: 0;
  border: 0;
  border-radius: 0;
}

.c7 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c2 {
  position: relative;
  height: 32px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
}

.c2:hover {
  border-color: #4B4B46;
}

.c5 {
  height: 32px;
  width: 100%;
  line-height: 32px;
  padding: 0 28px 0 8px;
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
  pointer-events: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  box-sizing: border-box;
}

<label>
  <div
    className="c0"
  >
    <span
      className="c1"
    >
      Stocks
    </span>
  </div>
  <div
    className="c2"
  >
    <select
      className="c3"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="Option 2"
    >
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
      <option
        value="Option 3"
      >
        Option 3
      </option>
    </select>
    <span
      aria-hidden={true}
      className="c4 c5"
    >
      Option 2
    </span>
    <svg
      aria-hidden="true"
      className="c6 c7"
      focus={false}
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
  </div>
</label>
`;

exports[`Storyshots DEPRECATED / Molecules / Select  Select with overflowing placeholder 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 100%;
  height: 32px;
  opacity: 0;
  border: 0;
  border-radius: 0;
}

.c6 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c1 {
  position: relative;
  height: 32px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
}

.c1:hover {
  border-color: #4B4B46;
}

.c4 {
  height: 32px;
  width: 100%;
  line-height: 32px;
  padding: 0 28px 0 8px;
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
  pointer-events: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  box-sizing: border-box;
}

<div
  style={
    Object {
      "width": 150,
    }
  }
>
  <label>
    <span
      className="c0"
    >
      Options
    </span>
    <div
      className="c1"
    >
      <select
        className="c2"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value={1}
      >
        <option
          value={1}
        >
          Reaaaaaaaaaally long option
        </option>
      </select>
      <span
        aria-hidden={true}
        className="c3 c4"
      >
        Reaaaaaaaaaally long option
      </span>
      <svg
        aria-hidden="true"
        className="c5 c6"
        focus={false}
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <polygon
          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`Storyshots DEPRECATED / Molecules / Select  Select with placeholder 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 100%;
  height: 32px;
  opacity: 0;
  border: 0;
  border-radius: 0;
}

.c6 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c1 {
  position: relative;
  height: 32px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
}

.c1:hover {
  border-color: #4B4B46;
}

.c4 {
  height: 32px;
  width: 100%;
  line-height: 32px;
  padding: 0 28px 0 8px;
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
  pointer-events: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  box-sizing: border-box;
}

<label>
  <span
    className="c0"
  >
    Options
  </span>
  <div
    className="c1"
  >
    <select
      className="c2"
      defaultValue=""
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        disabled={true}
        value=""
      >
        Select option
      </option>
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
      <option
        value="Option 3"
      >
        Option 3
      </option>
    </select>
    <span
      aria-hidden={true}
      className="c3 c4"
    >
      Select option
    </span>
    <svg
      aria-hidden="true"
      className="c5 c6"
      focus={false}
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
  </div>
</label>
`;

exports[`Storyshots DEPRECATED / Molecules / Select  Select with placeholder and preselected value 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 100%;
  height: 32px;
  opacity: 0;
  border: 0;
  border-radius: 0;
}

.c6 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c1 {
  position: relative;
  height: 32px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
}

.c1:hover {
  border-color: #4B4B46;
}

.c4 {
  height: 32px;
  width: 100%;
  line-height: 32px;
  padding: 0 28px 0 8px;
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
  pointer-events: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  box-sizing: border-box;
}

<label>
  <span
    className="c0"
  >
    Options
  </span>
  <div
    className="c1"
  >
    <select
      className="c2"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="Option 2"
    >
      <option
        disabled={true}
        value=""
      >
        Select option
      </option>
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
      <option
        value="Option 3"
      >
        Option 3
      </option>
    </select>
    <span
      aria-hidden={true}
      className="c3 c4"
    >
      Option 2
    </span>
    <svg
      aria-hidden="true"
      className="c5 c6"
      focus={false}
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
  </div>
</label>
`;

exports[`Storyshots DEPRECATED / Molecules / Select  Select with prepended empty value 1`] = `
.c0 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  width: 100%;
  height: 32px;
  opacity: 0;
  border: 0;
  border-radius: 0;
}

.c7 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c2 {
  position: relative;
  height: 32px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
}

.c2:hover {
  border-color: #4B4B46;
}

.c5 {
  height: 32px;
  width: 100%;
  line-height: 32px;
  padding: 0 28px 0 8px;
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
  pointer-events: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  box-sizing: border-box;
}

<label>
  <div
    className="c0"
  >
    <span
      className="c1"
    >
      Stocks
    </span>
  </div>
  <div
    className="c2"
  >
    <select
      className="c3"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    >
      <option
        value=""
      >
        All
      </option>
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
      <option
        value="Option 3"
      >
        Option 3
      </option>
    </select>
    <span
      aria-hidden={true}
      className="c4 c5"
    >
      All
    </span>
    <svg
      aria-hidden="true"
      className="c6 c7"
      focus={false}
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
  </div>
</label>
`;

exports[`Storyshots DEPRECATED / Molecules / Select  Select with preselected value 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 100%;
  height: 32px;
  opacity: 0;
  border: 0;
  border-radius: 0;
}

.c6 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c1 {
  position: relative;
  height: 32px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
}

.c1:hover {
  border-color: #4B4B46;
}

.c4 {
  height: 32px;
  width: 100%;
  line-height: 32px;
  padding: 0 28px 0 8px;
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
  pointer-events: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  box-sizing: border-box;
}

<label>
  <span
    className="c0"
  >
    Stocks
  </span>
  <div
    className="c1"
  >
    <select
      className="c2"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="Option 2"
    >
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
      <option
        value="Option 3"
      >
        Option 3
      </option>
    </select>
    <span
      aria-hidden={true}
      className="c3 c4"
    >
      Option 2
    </span>
    <svg
      aria-hidden="true"
      className="c5 c6"
      focus={false}
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
  </div>
</label>
`;

exports[`Storyshots DEPRECATED / Molecules / Select  Select without placeholder 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  width: 100%;
  height: 32px;
  opacity: 0;
  border: 0;
  border-radius: 0;
}

.c6 {
  -webkit-transform: translateY(-50%) rotate(0);
  -ms-transform: translateY(-50%) rotate(0);
  transform: translateY(-50%) rotate(0);
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
  -webkit-transition: -webkit-transform 0.16s ease-out;
  -webkit-transition: transform 0.16s ease-out;
  transition: transform 0.16s ease-out;
  position: absolute;
  height: 8px;
  top: 50%;
  right: 4px;
  pointer-events: none;
}

.c1 {
  position: relative;
  height: 32px;
  box-sizing: border-box;
  border: 1px solid #BCBCB6;
}

.c1:hover {
  border-color: #4B4B46;
}

.c4 {
  height: 32px;
  width: 100%;
  line-height: 32px;
  padding: 0 28px 0 8px;
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
  pointer-events: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  box-sizing: border-box;
}

<label>
  <span
    className="c0"
  >
    Stocks
  </span>
  <div
    className="c1"
  >
    <select
      className="c2"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
      <option
        value="Option 3"
      >
        Option 3
      </option>
    </select>
    <span
      aria-hidden={true}
      className="c3 c4"
    />
    <svg
      aria-hidden="true"
      className="c5 c6"
      focus={false}
      focusable="false"
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <polygon
        points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
      />
    </svg>
  </div>
</label>
`;
